
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int* s68k_regs; } ;


 int EL_CD ;
 int EL_INTS ;
 int PCDS_IEN4 ;
 int PCD_EVENT_CDC ;
 TYPE_1__* Pico_mcd ;
 int SekInterruptS68k (int) ;
 int cdd_update () ;
 int elprintf (int,char*) ;
 int pcd_event_schedule (unsigned int,int ,int) ;

__attribute__((used)) static void pcd_cdc_event(unsigned int now)
{

  cdd_update();


  if (!(Pico_mcd->s68k_regs[0x4b] & 0xf0))
  {

    Pico_mcd->s68k_regs[0x4b] = 0xf0;

    if (Pico_mcd->s68k_regs[0x33] & PCDS_IEN4) {
      elprintf(EL_INTS|EL_CD, "s68k: cdd irq 4");
      SekInterruptS68k(4);
    }
  }

  pcd_event_schedule(now, PCD_EVENT_CDC, 12500000/75);
}
