; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_mcd.c_pcd_cdc_event.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_mcd.c_pcd_cdc_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@Pico_mcd = common dso_local global %struct.TYPE_2__* null, align 8
@PCDS_IEN4 = common dso_local global i32 0, align 4
@EL_INTS = common dso_local global i32 0, align 4
@EL_CD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"s68k: cdd irq 4\00", align 1
@PCD_EVENT_CDC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @pcd_cdc_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcd_cdc_event(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 (...) @cdd_update()
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Pico_mcd, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 75
  %8 = load i32, i32* %7, align 4
  %9 = and i32 %8, 240
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %31, label %11

11:                                               ; preds = %1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Pico_mcd, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 75
  store i32 240, i32* %15, align 4
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Pico_mcd, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 51
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @PCDS_IEN4, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %30

24:                                               ; preds = %11
  %25 = load i32, i32* @EL_INTS, align 4
  %26 = load i32, i32* @EL_CD, align 4
  %27 = or i32 %25, %26
  %28 = call i32 @elprintf(i32 %27, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %29 = call i32 @SekInterruptS68k(i32 4)
  br label %30

30:                                               ; preds = %24, %11
  br label %31

31:                                               ; preds = %30, %1
  %32 = load i32, i32* %2, align 4
  %33 = load i32, i32* @PCD_EVENT_CDC, align 4
  %34 = call i32 @pcd_event_schedule(i32 %32, i32 %33, i32 166666)
  ret void
}

declare dso_local i32 @cdd_update(...) #1

declare dso_local i32 @elprintf(i32, i8*) #1

declare dso_local i32 @SekInterruptS68k(i32) #1

declare dso_local i32 @pcd_event_schedule(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
